--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
             <h3>HOME</h3>
         </div>
         <div class="header">
-            <h3>GUEST</h3>
+            <h3>AWAY</h3>
         </div>
     </div>
 
