--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <body>
         <div id="container">
         <div class="header">
-            <h3>Los Angeles Lakers</h3>
+            <h3>HOME</h3>
         </div>
         <div class="header">
-            <h3>Chicago Bulls</h3>
+            <h3>GUEST</h3>
         </div>
     </div>
 
