--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@
             <p id="guest-score" class="scoreline">0</p>
         </div>
 
-    </div>
-    
+    </div>  
 
     <!-- GAME PERIOD -->
     <div class="period">
@@ -50,25 +49,25 @@
 
         <div id="button">
             <div class="plus1">
-                <button onclick="homeAdd1()" class="btn">+1</button>
+                <button onclick="homeAdd1()" class="btn home-btn1">+1</button>
             </div>
             <div class="plus2">
-                <button onclick="homeAdd2()" class="btn">+2</button>
+                <button onclick="homeAdd2()" class="btn home-btn2">+2</button>
             </div>
             <div class="plus3">
-                <button onclick="homeAdd3()" class="btn">+3</button>
+                <button onclick="homeAdd3()" class="btn home-btn3">+3</button>
             </div>
         </div>
     
         <div id="button">
             <div class="plus1">
-                <button onclick="guestAdd1()" class="btn">+1</button>
+                <button onclick="guestAdd1()" class="btn guest-btn1">+1</button>
             </div>
             <div class="plus2">
-                <button onclick="guestAdd2()" class="btn">+2</button>
+                <button onclick="guestAdd2()" class="btn guest-btn2">+2</button>
             </div>
             <div class="plus3">
-                <button onclick="guestAdd3()" class="btn">+3</button>
+                <button onclick="guestAdd3()" class="btn guest-btn3">+3</button>
             </div>
         </div>
 
@@ -121,3 +120,6 @@
     <script src="javascript/script.js"></script>
 </body>
 </html>
+
+<!-- STORE SCORE -->
+<!--  -->
